Doctor UI & Docker Compose
Please test out thanks

--- a/Reveal/nurseUI-confirm.html
+++ b/Reveal/nurseUI-confirm.html
@@ -64,17 +64,17 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">Reve<span>al</span></a></h1>
+        <h1><a href="#body" class="scrollto">ESD<span> G7T9</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#body">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li class="menu-active"><a href="./index.html">Home</a></li>
+          <li><a href="./patientUI.html">Patient</a></li>
+          <li><a href="./nurseUI.html">Nurse</a></li>
+          <li><a href="./doctorUI.html">Doctor</a></li>
           <li><a href="#team">Team</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
