--- a/Reveal/index.html
+++ b/Reveal/index.html
@@ -52,9 +52,9 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="./patientUI.html">Patient</a></li>
-          <li><a href="./nurseUI.html">Nurse</a></li>
-          <li><a href="./doctorUI.html">Doctor</a></li>
+          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./nurseLogin.html">Nurse</a></li>
+          <li><a href="./doctorLogin.html">Doctor</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -71,7 +71,7 @@
     <div class="intro-content">
       <h2>Clinic <span>Appointment</span><br>Booking System</h2>
       <div>
-        <a href="#about" class="btn-get-started scrollto">Book an Appointment</a>
+        <a href="./patientLogin.html" class="btn-get-started scrollto">Book an Appointment</a>
       </div>
     </div>
 
