--- a/Reveal/nurseLogin.html
+++ b/Reveal/nurseLogin.html
@@ -60,7 +60,7 @@
           <input type="password" class="form-control" id="inputPassword">
         </div>
         <div style="padding-top: 20px;">
-          <button type="submit" class="btn btn-primary">Sign in</button>
+          <button type="submit" class="btn btn-primary" onclick="nurselogin()">Sign in</button>
         </div>
       </form>
     </div>
@@ -70,6 +70,7 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
+  <script type="text/javascript" src="./js/login.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
