--- a/Reveal/patientLogin.html
+++ b/Reveal/patientLogin.html
@@ -62,7 +62,7 @@
         <div style="padding-top: 20px;">
           <button type="submit" class="btn btn-primary" onclick="patientlogin()">Sign in</button>
         </div>
-        <div id="title"></div>
+        <div id="title" style="padding-top: 10px;">hi</div>
       </form>
     </div>
 
