--- a/Reveal/patientLogin.html
+++ b/Reveal/patientLogin.html
@@ -52,12 +52,12 @@
       <form style="padding-left: 200px; padding-right: 200px;">
         <h3>Patient Login Page</h3>
         <div >
-          <label for="fullname" class="form-label">Full Name</label>
-          <input type="name" class="form-control" id="fullName">
+          <label for="fullname" class="form-label">Name</label>
+          <input type="text" class="form-control" id="Name">
         </div>
         <div>
           <label for="inputPassword" class="form-label">NRIC</label>
-          <input type="password" class="form-control" id="NRIC">
+          <input type="text" class="form-control" id="NRIC">
         </div>
         <div style="padding-top: 20px;">
           <button type="submit" class="btn btn-primary" onclick="patientlogin()">Sign in</button>
