--- a/UI/nurseUI.html
+++ b/UI/nurseUI.html
@@ -136,12 +136,12 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Nurse Administration Portal</h3>
-            <p class="cta-text"> Match patients' bookings with doctors and confirm the appointments a day before they
+            <p class="cta-text"> Match patients' bookings with doctors and confirm the appointments a day before <br>they
               are scheduled</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Match Bookings</a>
-            <a class="cta-btn align-middle" href="#">Confirm Appointments</a>
+            <a class="cta-btn align-middle" href="nurseUI-match.html">Match Bookings</a>
+            <a class="cta-btn align-middle" href="nurseUI-confirm.html">Confirm Appointments</a>
           </div>
         </div>
 
