--- a/UI/patientLogin.html
+++ b/UI/patientLogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ESD G7T6</title>
@@ -12,7 +13,9 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
+    rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,33 +42,43 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">ESD <span>G7T6</span></a></h1>
+        <h1><a href="./index.html" class="scrollto">ESD <span>G7T6</span></a></h1>
       </div>
 
-      
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./nurseLogin.html">Nurse</a></li>
+          <li><a href="./doctorLogin.html">Doctor</a></li>
+        </ul>
+      </nav><!-- #nav-menu-container -->
+
+
     </div>
   </header><!-- #header -->
 
   <main id="main">
-
-    <div class="container" style="padding-top: 150px; padding-bottom: 200px;">
-      <form style="padding-left: 200px; padding-right: 200px;">
-        <h3>Patient Login Page</h3>
-        <div >
-          <label for="fullname" class="form-label">Name</label>
-          <input type="text" class="form-control" id="Name">
+    <!--==========================
+      Log In Section
+    ============================-->
+    <section id="call-to-action" class="wow fadeInUp">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg text-center text-lg-left">
+            <h3 class="cta-title">Patient Log In</h3>
+            <label for="inputEmail" class="cta-text">Email</label>
+            <input type="email" class="form-control" id="inputEmail">
+            <label for="inputPassword" class="cta-text">Password</label>
+            <input type="password" class="form-control" id="inputPassword">
+          </div>
         </div>
-        <div>
-          <label for="inputPassword" class="form-label">NRIC</label>
-          <input type="text" class="form-control" id="NRIC">
+        <div class="row">
+          <div class="col-lg cta-btn-container text-center">
+            <a class="cta-btn align-middle" href="patientUI.html">Log In</a>
+          </div>
         </div>
-        <div style="padding-top: 20px;">
-          <button type="submit" class="btn btn-primary" onclick="patientlogin()">Sign in</button>
-        </div>
-        <div id="title" style="padding-top: 10px;">hi</div>
-      </form>
-    </div>
-
+      </div>
+    </section><!-- #Log In Section -->
   </main>
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
@@ -90,4 +103,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
