--- a/UI/nurseUI-confirm.html
+++ b/UI/nurseUI-confirm.html
@@ -64,29 +64,18 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">ESD<span> G7T9</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
+        <h1><a href="./index.html" class="scrollto">ESD <span>G7T6</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="./index.html">Home</a></li>
-          <li><a href="./patientUI.html">Patient</a></li>
-          <li><a href="./nurseUI.html">Nurse</a></li>
-          <li><a href="./doctorUI.html">Doctor</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="./patientLogin.html">Patient</a></li>
+          <li><a href="./nurseLogin.html">Nurse</a></li>
+          <li><a href="./doctorLogin.html">Doctor</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
+
+
     </div>
   </header><!-- #header -->
 
