added fake inputs

--- a/UI/doctorLogin.html
+++ b/UI/doctorLogin.html
@@ -67,9 +67,9 @@
           <div class="col-lg text-center text-lg-left">
             <h3 class="cta-title">Doctor Log In</h3>
             <label for="inputEmail" class="cta-text">Email</label>
-            <input type="email" class="form-control" id="inputEmail">
+            <input type="email" class="form-control" id="inputEmail" value="doctor@gmail.com">
             <label for="inputPassword" class="cta-text">Password</label>
-            <input type="password" class="form-control" id="inputPassword">
+            <input type="password" class="form-control" id="inputPassword" value="doctorPassword">
           </div>
         </div>
         <div class="row">
