--- a/UI/nurseLogin.html
+++ b/UI/nurseLogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ESD G7T6</title>
@@ -12,7 +13,9 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
+    rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,9 +67,9 @@
           <div class="col-lg text-center text-lg-left">
             <h3 class="cta-title">Nurse Log In</h3>
             <label for="inputEmail" class="cta-text">Email</label>
-            <input type="email" class="form-control" id="inputEmail">
+            <input type="email" class="form-control" id="inputEmail" value="nurse@gmail.com">
             <label for="inputPassword" class="cta-text">Password</label>
-            <input type="password" class="form-control" id="inputPassword">
+            <input type="password" class="form-control" id="inputPassword" value="nursePassword">
           </div>
         </div>
         <div class="row">
@@ -100,4 +103,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
