--- a/UI/nurseUI-matchPg.html
+++ b/UI/nurseUI-matchPg.html
@@ -86,6 +86,7 @@
               <th scope="col">Appointment Time</th>
               <th scope="col">Available Doctors</th>
               <th scope="col">Status</th>
+              <th scope="col">Action</th>
               
             </tr>
           </thead>
