match.py and nurse UI

--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -92,15 +92,16 @@
             </tr>
           </thead>
           <tbody>
-            <tr v-for="record in appointments" class="table-light">
+            <tr v-for="(record, index) in appointments" class="table-light">
               <th scope="row"> {{ record.appointment_id }} </th>
               <td>{{ record.NRIC }}</td>
               <td> {{ record.appointment_date }} </td>
               <td> {{ record.appointment_time }} </td>
               <td v-if="doctorsAvail"> 
+              <!-- <td> -->
                 <select v-model="selected" > 
                   <option disabled value="">Please select a doctor</option>
-                  <option v-for="doctor in availableDoctors" :key='doctor.name'>
+                  <option v-for="doctor in available_doctors[index]" :key='doctor.name'>  
                       {{ doctor.name }}
                   </option>
                 </select> 
@@ -145,9 +146,9 @@
 
     
 
-  // <!--==========================
-    // Footer
-  // ============================-->
+ <!--==========================
+ Footer
+ ============================-->
   <footer id="footer">
     <div class="container">
       <div class="copyright">
@@ -164,11 +165,11 @@
       </div>
     </div>
   </footer>
-  // <!-- #footer -->
+  <!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-  // <!-- JavaScript Libraries -->
+ <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -180,10 +181,10 @@
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/sticky/sticky.js"></script>
 
-  // <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+ <!-- Contact Form JavaScript File -->
+  <!-- <script src="contactform/contactform.js"></script> -->
 
-  // <!-- Template Main Javascript File -->
+  <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
   <script src="js/nurse.js"></script>
 
