--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -145,7 +145,7 @@
 
     
 
-  // <!--==========================
+  <!--==========================
     // Footer
   // ============================-->
   <footer id="footer">
@@ -164,11 +164,11 @@
       </div>
     </div>
   </footer>
-  // <!-- #footer -->
+  <!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-  // <!-- JavaScript Libraries -->
+  <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -180,10 +180,10 @@
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/sticky/sticky.js"></script>
 
-  // <!-- Contact Form JavaScript File -->
+  <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
 
-  // <!-- Template Main Javascript File -->
+  <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
   <script src="js/nurse.js"></script>
 
