--- a/UI/nurseUI-match.html
+++ b/UI/nurseUI-match.html
@@ -130,7 +130,7 @@
         <div class="modal-content" style="background-color:rgb(234, 243, 238);">
           <div class="modal-body mt-4">
             <h5 class="font-weight-bold text-center"> Matched Appointment </h5>
-            <p class="font-weight-bold mt-8 ml-4"> Patient: {{ record.name }}</p>
+            <p class="font-weight-bold mt-8 ml-4"> Patient: {{ record.NRIC }}</p>
             <p class="font-weight-bold mt-8 ml-4"> Date: {{record.appointment_date}} </p>
             <p class="font-weight-bold mt-8 ml-4"> Time: {{record.appointment_time}} </p>
             <p class="font-weight-bold mt-8 ml-4"> Doctor: {{ doctor.name }}</p>
