--- a/UI/doctorUI.html
+++ b/UI/doctorUI.html
@@ -156,10 +156,16 @@
     <section class="wow fadeInUp mt-4"> <!-- Availability search bar and tables START-->
       <div class="container"> <!-- container START-->
         <div v-show="!edit"> <!-- v-show: !edit START-->
-          <span style='font-size: 20px;'> Enter your Availability S/N: </span>
+          <span style='font-size: 20px;'> Search by Availability S/N: </span>
           <input id="avail" v-model="aid" placeholder="Availability S/N">
           <button @click="findDoctor()" type="button" class="btn btn-blue mx-2">Search</button>
-          <button @click="pageRefresh()" type="button" class="btn btn-blue">Clear</button><br>
+
+
+          <span style='font-size: 20px;'> Search by Date: </span>
+          <input id="datetime" v-model="datetime" placeholder="e.g. 2021-03-25">
+          <button @click="findByDateTime()" type="button" class="btn btn-blue mx-2">Search</button>
+
+          <button @click="pageRefresh()" type="button" class="btn btn-blue float-right">Clear All</button><br>
 
           <span class="text-danger" v-if="searchError!=''">
             {{ searchError}}
